--- a/SweetHistory/res/layout/form_doctor.xml
+++ b/SweetHistory/res/layout/form_doctor.xml
@@ -7,16 +7,19 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bebe_datos_l" />
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:src="@drawable/doctor_datos" />
 
     <EditText
         android:id="@+id/doctorName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/name" >
+        android:ems="30"
+        android:hint="@string/name"
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
@@ -25,8 +28,11 @@
         android:id="@+id/doctorLastname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/lastname" >
+        android:ems="30"
+        android:hint="@string/lastname" 
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
@@ -37,7 +43,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/cellNumber" 
-        android:inputType="number">
+        android:inputType="number" 
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
@@ -48,7 +57,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/officeNumber"
-        android:inputType="number" >
+        android:inputType="number" 
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
@@ -57,9 +69,12 @@
         android:id="@+id/doctorEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="30"
         android:hint="@string/email"
-        android:inputType="textEmailAddress" >
+        android:inputType="textEmailAddress" 
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
@@ -68,16 +83,14 @@
         android:id="@+id/doctorAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/address" >
+        android:ems="40"
+        android:hint="@string/address" 
+        android:layout_marginLeft="@dimen/leftMarginFormBaby"
+            android:layout_marginRight="@dimen/rigthMarginFormBaby"
+            android:layout_marginTop="@dimen/topMarginForm" >
 
         <requestFocus />
     </EditText>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save" />
 
 </LinearLayout>
