--- a/SweetHistory/res/menu/main.xml
+++ b/SweetHistory/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="always"
         android:title="@string/action_addSintom"/>
+    
+    <item
+        android:id="@+id/addEvent"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/action_addSintom"/>
 
 </menu>
