--- a/SweetHistory/res/values/dimens.xml
+++ b/SweetHistory/res/values/dimens.xml
@@ -3,5 +3,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="topMarginForm">8dp</dimen>
+    <dimen name="topMarginFormBaby">8dp</dimen>
+    <dimen name="rigthMarginFormBaby">25dp</dimen>
+    <dimen name="leftMarginFormBaby">25dp</dimen>
+    
+
 
 </resources>
