--- a/SweetHistory/res/layout/row_tip.xml
+++ b/SweetHistory/res/layout/row_tip.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@null">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -11,10 +12,9 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/timelineCircle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/moneda_l" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tipTitle"
