--- a/SweetHistory/res/layout/time_line.xml
+++ b/SweetHistory/res/layout/time_line.xml
@@ -17,6 +17,6 @@
         android:id="@+id/txtCalendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 </LinearLayout>
