--- a/SweetHistory/res/menu/main.xml
+++ b/SweetHistory/res/menu/main.xml
@@ -3,14 +3,14 @@
     <item
         android:id="@+id/addSintom"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        android:showAsAction="never"
         android:title="@string/action_addSintom"/>
     
     <item
         android:id="@+id/addEvent"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:title="@string/action_addSintom"/>
+        android:showAsAction="never"
+        android:title="@string/action_addEvent"/>
 
 	<item
 		android:id="@+id/addAlarm"
