--- a/SweetHistory/res/values/dimens.xml
+++ b/SweetHistory/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="rigthMarginFormBaby">25dp</dimen>
     <dimen name="leftMarginFormBaby">25dp</dimen>
 	<dimen name="smallPadding">5dp</dimen>
+	<dimen name="menuWidth">230dp</dimen>
 
 
 </resources>
