--- a/SweetHistory/res/values/styles.xml
+++ b/SweetHistory/res/values/styles.xml
@@ -2,31 +2,28 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
+
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-    
-    <!-- 
+	    <!-- Support library compatibility -->
 
-    <style name="solid_ActionBar" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="background">@color/red</item>
-        <item name="titleTextStyle">@style/ActionBarTitleTheme</item>
+	    <item name="android:selectableItemBackground">@null</item>
     </style>
 
-    <style name="ActionBarTitleTheme" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/green</item>
-    </style>
-    
-     -->
+	<style name="solid_ActionBar" parent="android:Widget.ActionBar">
+		<item name="android:alpha">.80</item>
+	</style>
+
 </resources>
