--- a/SweetHistory/res/layout/time_line.xml
+++ b/SweetHistory/res/layout/time_line.xml
@@ -13,10 +13,23 @@
         android:divider="@null" >
     </ListView>
 
-    <TextView
-        android:id="@+id/txtCalendar"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_month" />
+
+        <TextView
+            android:id="@+id/txtCalendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
 
 </LinearLayout>
