--- a/SweetHistory/res/layout/drawer_activity.xml
+++ b/SweetHistory/res/layout/drawer_activity.xml
@@ -9,7 +9,10 @@
     <FrameLayout
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
     <!-- The navigation drawer -->
 	<ListView android:id="@+id/left_drawer"
