--- a/SweetHistory/res/layout/drawer_list_item.xml
+++ b/SweetHistory/res/layout/drawer_list_item.xml
@@ -7,6 +7,6 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:textColor="#fff"
+    android:textColor="#7c7f93"
     android:text="Prueba"
     android:background="?android:attr/activatedBackgroundIndicator"/>
