--- a/SweetHistory/res/layout/form_element.xml
+++ b/SweetHistory/res/layout/form_element.xml
@@ -28,6 +28,8 @@
             android:id="@+id/txtFormElement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 
@@ -44,15 +46,25 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="100"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine"
+        android:hint="Mi bebé..." >
 
         <requestFocus />
     </EditText>
-
+    
     <ImageView
-        android:id="@+id/imgPicture"
+        android:id="@+id/camera"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@android:drawable/ic_menu_camera" />
+        android:src="@drawable/camara" />
+    
+    <SurfaceView
+          android:id = "@+id/surface"
+          android:layout_width = "200dp"
+          android:layout_height = "200dp"
+          android:visibility="invisible">
+     </SurfaceView>
+
+    
 
 </LinearLayout>
