--- a/SweetHistory/res/values/colors.xml
+++ b/SweetHistory/res/values/colors.xml
@@ -3,6 +3,6 @@
     
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
-	<color name="menuBackground">#232323</color>
+	<color name="menuBackground">#d4daf9</color>
     
 </resources>
