--- a/SweetHistory/res/values/colors.xml
+++ b/SweetHistory/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
 	<color name="menuBackground">#d4daf9</color>
+    <color name="tabSelected">#a86ee5</color>
+
     
 </resources>
